--- a/src/main/resources/templates/viewTasks.html
+++ b/src/main/resources/templates/viewTasks.html
@@ -11,10 +11,40 @@
     />
     <title th:text="${title}">Document</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="container d-flex flex-column">
-      <h1 th:text="${title}" class="text-center my-5"></h1>
-      <table class="table table-striped table-dark">
+      <h1 th:text="${title}" class="text-center my-5 text-light"></h1>
+      <div class="mb-3 d-flex justify-content-end gap-4">
+        <form class="d-flex gap-4" role="search" th:object="${task}">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search Task"
+            aria-label="Search"
+            th:field="*{title}"
+          />
+          <div class="form-floating w-100">
+            <select
+              class="form-select"
+              id="status"
+              aria-label="Floating label select example"
+              th:field="*{status}"
+              th:value="${task.status}"
+            >
+              <option value="" selected>Select status</option>
+              <option value="Completed" selected>Completed</option>
+              <option value="Pending">Pending</option>
+              <option value="Canceled">Canceled</option>
+            </select>
+            <label for="status">Filter by status</label>
+          </div>
+          <button class="btn btn-success" type="submit">Search</button>
+        </form>
+        <a th:href="@{/form}" class="btn btn-success d-flex align-items-center"
+          >Create Task</a
+        >
+      </div>
+      <table class="table table-striped table-dark border border-light table-hover">
         <thead>
           <tr>
             <th scope="col">Id</th>
@@ -30,15 +60,23 @@
           <tr th:each="task : ${tasks}">
             <th scope="row" th:text="${task.Id}"></th>
             <td th:text="${task.title}"></td>
-            <td th:text="${task.description}"></td>
+            <td th:text="${task.description}" ></td>
             <td th:text="${task.dueDate}"></td>
             <td th:text="${task.hourDate}"></td>
             <td th:text="${task.status}"></td>
             <td>
-                <div class="d-flex gap-2">
-                    <a th:href="@{/form/{id}(id=${task.id})}" class="btn btn-primary">Update</a>
-                    <a th:href="@{/form/deleteTask/{id}(id=${task.id})}" class="btn btn-danger">Delete</a>
-                </div>
+              <div class="d-flex gap-2">
+                <a
+                  th:href="@{/form/{id}(id=${task.id})}"
+                  class="btn btn-primary"
+                  >Update</a
+                >
+                <a
+                  th:href="@{/form/deleteTask/{id}(id=${task.id})}"
+                  class="btn btn-danger"
+                  >Delete</a
+                >
+              </div>
             </td>
           </tr>
         </tbody>
